# device-monitor

./: .gitignore  LICENSE  README.md  pyproject.toml
src/device_monitor/: cli.py  server.py
src/device_monitor/templates/: index.html
tests/: test_device_monitor.py
