[tool.poetry]
name = "device-monitor"
version = "0.1.0"
description = ""
authors = ["Hirahara. Taiki <hirahara.taiki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.9"
psutil = "^5.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
device-monitor = "device_monitor.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
